# GpT2

./: DOCKERFILE  main.py  pyproject.toml
.github/workflows/: action.yml
core/handlers/: basic.py
deploy/: .env_ci  docker-compose-ci.yml
